--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Iu Nhất Trên Đời</title>
+    <title>Something About Me</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
